syntax = "proto3";

option go_package="./pb";

package pb;

message UserReply {
  int64 ID = 1;
  string UserID = 2;
  string UUID = 3;
  string Username = 4;
  string Email = 5;
  string Nickname = 6;
  string Password = 7;
  string Avatar = 8;
  int64 Type = 9;
  int64 Status = 10;
  int64 CreatedAt = 11;
  int64 UpdatedAt = 12;
}

message UserIDReq {
  string UserID = 1;
}

// 用户信息 出参
message UserInfoReply {
  UserReply User = 1;
}

// 分页请求 req
message PageReq {
  int64 Page = 1;
  int64 PageSize = 2;
  string KeyWork = 3;
}

message PageReply {
  int64 Total = 1;
  repeated UserReply List = 2;
}

message Nil {}
message CreateReq {
  string Username = 4;
  string Email = 5;
  string Nickname = 6;
  string Password = 7;
  string Avatar = 8;
  int64 Type = 9;
}

service user {
  rpc find (UserIDReq) returns (UserInfoReply);
  rpc list (PageReq) returns (PageReply);
  rpc create (CreateReq) returns (Nil);
}